2.9.3
  - Add <url /> element to pom so can get into central :-)

2.9.2
  - Add ` as a legal SQL character in colon prefix grammar
  - non-existant release, fighting maven

2.9.1
  - First 2.9 series release

2.9.0
  - Make the DefaultMapper public.
  - Aborted, trying to make gpg signing work correctly

2.8.0
  - Add methods to SQLStatement and PreparedBatch that allow adding a set of defines
    to the context in one go.
  - Add ~ { and } as legal characters in the colon prefix grammar

2.7.0
  - A TimingCollector was added which can be registered on the DBI or handle which then
    gets called with nanosecond resolution elapsed time every time a statement is run
    against the data base.
  - re-added some Exception constructors that were accidentially removed in 2.3.0 making
    2.4.0-2.6.x non-backwards compatible.
  - Bind java.util.Date as a timestamp because it contains time and date.
  - BasicHandle constructor is now package private (which it always should have been)
  - add Clirr Report to the Maven Site
  - convert all calls to System.currentTimeMillis() to System.nanoTime(), which is more
    accurate and much more lightweight. As we only calculate time differences, it is
    good enough.
  - fix more compiler warnings
  - add null checks for all object types on SQLStatement
  - move object null checks, that don't require boxing/unboxing
    into the Argument classes. Keep the checks for object/primitive
    types in SQL to avoid boxing/unboxing overhead.

2.6.0
   Fix a number of compiler warnings
   Add new binding methods for SQLStatement
    - Integer, Boolean, Byte, Long, Short  Object
    - double, float, short primitive
   All bind methods taking an object should check
   for null values and bind a NullArgument accordingly.

2.5.0
    Add new binding methods for SQLStatement
      - char types
      - boolean as int (for DBs missing a boolean type)
    Re-add unit test removed in 2.4.9 with unicode escapes

2.4.9