@@ -1101,7 +1101,12 @@ public abstract class SQLStatement<SelfType extends SQLStatement<SelfType>>
      */
     public final SelfType bind(int position, Object value)
     {
-        return bind(position, new ObjectArgument(value));
+        if (value != null) {
+            return bind(position, new ObjectArgument(value));
+        }
+        else {
+            return bind(position, new NullArgument(Types.VARCHAR));
+        }
     }
 
     /**
@@ -1114,7 +1119,12 @@ public abstract class SQLStatement<SelfType extends SQLStatement<SelfType>>
      */
     public final SelfType bind(String name, Object value)
     {
-        return bind(name, new ObjectArgument(value));
+        if (value != null) {
+            return bind(name, new ObjectArgument(value));
+        }
+        else {
+            return bind(name, new NullArgument(Types.VARCHAR));
+        }
     }
 
     /**
@@ -1264,12 +1274,12 @@ public abstract class SQLStatement<SelfType extends SQLStatement<SelfType>>
         ResultSet rs = null;
         try {
             try {
-	            if (getClass().isAssignableFrom(Call.class)) {
-		            stmt = statementBuilder.createCall(this.getConnection(), rewritten.getSql(), context);
-	            }
-	            else {
+                if (getClass().isAssignableFrom(Call.class)) {
+                    stmt = statementBuilder.createCall(this.getConnection(), rewritten.getSql(), context);
+                }
+                else {
                     stmt = statementBuilder.create(this.getConnection(), rewritten.getSql(), context);
-	            }
+                }
             }
             catch (SQLException e) {
                 throw new UnableToCreateStatementException(e,context);
